--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -8,7 +8,7 @@
 	<div id="right-text">
 		<h3>Why 100 Beds?</h3>  
 		<p>
-			<strong>Long-term recovery requires long-term solutions.</strong> The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries. Additional medical conditions will result from lack of durable beds. Also, <strong>H&ocirc;pital Sacr&eacute; Coeur must expand</strong> to meet the needs of an increasing population. By sending <strong>more quality beds</strong>, nurses and doctors can ensure that patient <strong>recovery happens faster</strong> and <strong>meet the populations' needs</strong>.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti's overall long-term recovery. 
+			Long-term recovery requires long-term solutions. The Haitian people have emergency needs now as H&ocirc;pital Sacr&eacute; Coeur has many patients still assigned to cots and stretchers for lack of hospital beds.  But many are long-term patients and will need physical therapy, rehabilitation, and surgeries. Additional medical conditions will result from lack of durable beds. Also, H&ocirc;pital Sacr&eacute; Coeur must expand to meet the needs of an increasing population. By sending more quality beds, nurses and doctors can ensure that patient recovery happens faster and meet the populations' needs.  Quality hospital beds are durable and, in the long run, are an economical investment into Haiti's overall long-term recovery. 
 		</p>	
 
 	</div> 
@@ -16,14 +16,13 @@
 		<h3>What is the Campaign?</h3>
 
 		<p>
-			The <strong><u>100 Beds for Haiti Campaign</u></strong> is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
+			The 100 Beds for Haiti Campaign is made up of creative and passionate citizens, students, and professionals dedicated to improving health services in Haiti. 
 		</p>
 		<p>
-Thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti's largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) is responding to this population change.  Prior to the earthquake, HSC had 73 permanent inpatient beds. Since the quake, the hospital has made emergency expansions to meet the inpatient needs of an additional 400+ patients.  In the months ahead, HSC plans to maintain a total bed count of 200, making <strong>the need for more quality hospital beds overwhelming.</strong>
-		</p>
+Thousands of displaced Haitians have relocated to Northern Haiti to escape the physical devastation of the January earthquake.  As Haiti's largest and best functioning private hospital, the H&ocirc;pital Sacr&eacute; Coeur (HSC) is responding to this population change.  Prior to the earthquake, HSC had 73 permanent inpatient beds. Since the quake, the hospital has made emergency expansions to meet the inpatient needs of an additional 400+ patients.  In the months ahead, HSC plans to maintain a total bed count of 200, making the need for more quality hospital beds overwhelming.</p>
 		<p>
-			In partnership with HSC and The CRUDEM Foundation, Inc. we aim to raise the money and resources to purchase and deliver 100 hospital beds to <strong>meet this immediate need</strong> and <strong>support the sustainable, long-term recovery and development of Haiti.
-</strong></p>
+			In partnership with HSC and The CRUDEM Foundation, Inc. we aim to raise the money and resources to purchase and deliver 100 hospital beds to meet this immediate need and support the sustainable, long-term recovery and development of Haiti.
+</p>
 	</div>
 	
 	<!--
