--- a/views/base.tmpl
+++ b/views/base.tmpl
@@ -15,77 +15,70 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script type='text/javascript' src='/js/jquery.color-RGBa-patch.js'></script>
     <script type='text/javascript' src='/js/example.js'></script>
- <script type="text/javascript">
-   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
- </script>
- <script type="text/javascript">
-   try {
-   var pageTracker = _gat._getTracker("UA-12751934-1");
-   pageTracker._setDomainName(".100bedsforhaiti.com");
-   pageTracker._trackPageview();
-   } catch(err) {}
- </script>
-
   </head>
 
-  <body>
-	
-	<div id="head">
-		<div id="wrap">
-			<a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
-		</div>
-	</div>
-	<div id="lead">
-		<div id="wrap">
-			<p>In Haiti's <a href="http://www.crudem.org" target="_blank">Sacr&eacute; Coeur Hospital</a>, hundreds of sick patients will spend tonight sleeping on cots, floors and benches. Something as simple as a hospital bed can improve the outcome for the sick dramatically. The 100 Beds for Haiti Campaign needs your help to procure and deliver 100 hospital beds. Your small contribution today will have a lasting impact on Haiti's healthier tomorrow. 
-			</p>
-		</div>
-  	</div>	
-	<div id="navigation">
-		<div id="wrap">
+ 
+
+<body>
+<div id="head">
+<div id="wrap">
+<div id="donate">
+<a href="/donate"><img src="images/donatebutton.png" alt="Donate now to bring beds to Haiti"></a>
+</div>
+
+<a href="http://100bedsforhaiti.com"><img src="images/haiti_logo.jpg" alt="100 Beds for Haiti logo" /></a>
+
+</div>
+
+</div>
+
+<div id="navigation"><div id="wrap">
 			<ul id="" class="nav-list group">
 				<li><a href="/">home</a></li>
 				<li><a href="/about">about</a></li>
 				<li><a href="/partners">partners</a></li>
 				<li><a href="/how">how we work</a></li>
 				<li><a href="/getinvolved">get involved</a></li>
-				<li><a href="http://100bedsforhaitiblog.blogspot.com/" target="_blank">blog</a></li>
+		<li><a href="http://100bedsforhaitiblog.blogspot.com/" target="_blank">blog</a></li>
 
 
-<li><a class="nav-donate" href="/donate">donate now</a></li>
-							</ul>
-		</div>
-	</div>
+
+				</ul>
+
+</div>
+</div>
+
+<div id="wrap">
 	
-	<div id ="wrap">
-			
-    	<div id="sidebar">
-			<object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><p><a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a> </p>
-			<!-- Start VisualLightBox.com BODY section -->
-			<div id="vlightbox">
-				<a class="vlightbox" href="/data/images/3723768885_48a6afe0e1_o.jpg" title="3723768885_48a6afe0e1_o"><img src="/data/thumbnails/3723768885_48a6afe0e1_o.jpg" alt="3723768885_48a6afe0e1_o"/></a>
-				<a class="vlightbox" href="/data/images/3723774489_59b2d88934_o.jpg" title="3723774489_59b2d88934_o"><img src="/data/thumbnails/3723774489_59b2d88934_o.jpg" alt="3723774489_59b2d88934_o"/></a>
-				<a class="vlightbox" href="/data/images/3729739160_26349fc774_o.jpg" title="3729739160_26349fc774_o"><img src="/data/thumbnails/3729739160_26349fc774_o.jpg" alt="3729739160_26349fc774_o"/></a>
-				<a class="vlightbox" href="/data/images/haiti_hospital.jpg" title="haiti hospital"><img src="/data/thumbnails/haiti_hospital.jpg" alt="haiti hospital"/></a>
-				<a class="vlightbox" href="/data/images/haiti_hospital_1.jpg" title="haiti hospital 1"><img src="/data/thumbnails/haiti_hospital_1.jpg" alt="haiti hospital 1"/></a>
-				<a class="vlightbox" href="/data/images/haiti_hospital_2.jpg" title="haiti hospital 2"><img src="/data/thumbnails/haiti_hospital_2.jpg" alt="haiti hospital 2"/></a>
-				<a class="vlightbox" href="/data/images/022.jpg" title="022"><img src="/data/thumbnails/022.jpg" alt="022"/></a>
-				<a class="vlightbox" href="/data/images/028.jpg" title="028"><img src="/data/thumbnails/028.jpg" alt="028"/></a>
-				<a class="vlightbox" href="/data/images/3723770971_6978d3f4e1_o.jpg" title="3723770971_6978d3f4e1_o"><img src="/data/thumbnails/3723770971_6978d3f4e1_o.jpg" alt="3723770971_6978d3f4e1_o"/></a><script src="/js/visuallightbox.js" type="text/javascript"></script>
-			</div>
-	      	<!-- End VisualLightBox.com BODY section -->
-			<div id="social">
-				<a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
-				<a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
-				<a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
-	      		<p>
-					<a href="/contact">Contact Us!</a>
-				</p>
-			</div>
-		</div>
-	
-		<div id="main">
+<div id="sidebar">
+<div id="progress"><a href="/donate"><img src="images/progress35.png" alt="35 of 100 beds" /></a></div>
+<object width="290" height="163"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=9114595&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00ADEF&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="290" height="163"></embed></object><br />
+<a href="http://vimeo.com/9114595">H&ocirc;pital Sacr&eacute; Coeur "Haiti Relief Fund"</a><br />
+
+<!-- Start of Flickr Badge -->
+<div class="flickr">
+<div class="flickrwrapper">
+<script type="text/javascript" src="http://www.flickr.com/badge_code_v2.gne?count=6&display=random&size=s&layout=x&source=user&user=47421840%40N06"></script>
+</div>
+<div class="flickrlink"><a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank">100 Beds for Haiti&#39;s Flickr Photostream</a></div></div>
+<!-- End of Flickr Badge -->
+
+<!-- End of Flickr Badge -->
+
+
+<div id="social"><a href="http://100bedsforhaitiblog.blogspot.com/feeds/posts/default" target="_blank"><img src="images/rss.png" /></a>
+<div class="socialrow">
+<a href="http://twitter.com/100bedsforhaiti" target="_blank"><img src="images/twitter.png" /></a>
+
+<a href="http://www.facebook.com/home.php?#!/pages/100-Beds-for-Haiti/296584143649" target="_blank"><img src="images/facebook.png" /></a>
+<a href="http://www.flickr.com/photos/100bedsforhaiti/" target="_blank"><img src="images/flickr.png" /></a>
+
+<a href="http://vimeo.com/9114595" target="_blank"><img src="images/vimeo.png" /></a>	      	
+</div>
+</div>
+</div>
+
+<div id="main">
 		    $maincol()
 
 		    <script type="text/javascript">
@@ -103,10 +96,14 @@
 		    </script>	
 		</div>
 	
+
 	</div>	
  
 
-  </body>
+
+<br clear="all" />
+<div id="footer"><div id="footer-wrap"><ul><li><a href="/contact">Contact Us</a></li></ul></div></div>  
+</body>
 </html>
 
 #def donation_buttons()
