--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -13,7 +13,7 @@
 
 			<form method="post" action="/contact/comment">
 				<ul>
-					<li><h3><label for="name">Name:</label><h3></li>
+					<li><h3><label for="name">Name:</label></h3></li>
 					<li><input type="text" name="name" id="Name" /></li>
 					<li><h3><label for="email">Email:</label></h3></li>
 					<li><input type="text" name="email" id="Email" /></li>
