--- a/views/donate.tmpl
+++ b/views/donate.tmpl
@@ -2,20 +2,17 @@
 
 #def maincol()
 
-<div id="page-wrap"> <h1>Take Action</h1> <div id="right-text"> <h3>Select an Amount</h3> <p> Please
-click on an amount to donate to this campaign. </p>
+<div id="page-wrap"> <h1>Donate Now</h1> <div id="right-text"><p> Please 
+click on an amount to donate to this campaign. All donations are made safely through PayPal.</p>
 
 <table> <tr> <td class="donate-price"> $pp_button(0) </td> <td class="donate-price"> $pp_button(25)
 </td> <td class="donate-price"> $pp_button(50) </td> </tr> <tr> <td class="donate-price">
 $pp_button(100) </td> <td class="donate-price"> $pp_button(250) </td> <td class="donate-price">
-$pp_button(500) </td> </tr> </table> </div> <div id="left-text"> <h3>Donate</h3> <p> The easiest and
-quickest way to help is by donating. </p> <p> We are raising the money and resources to finance the
+$pp_button(500) </td> </tr><tr><td colspan="3" class="donate-price"><img src="images/horizontal_solution_PPeCheck.gif"></td></tr></table> </div> <div id="left-text"> <p>The easiest and 
+quickest way to help is by donating.</p> <p> We are raising the money and resources to finance the
 purchase, transportation, and delivery of 100 hospital beds to the H&ocirc;pital Sacr&eacute; Coeur.
-Every donation helps us reach this critical goal. </p> <p> <b>100% of donations will be delivered
+Every donation helps us reach this critical goal. </p> <p>100% of donations will be delivered
 directly to our partners in Haiti, The CRUDEM Foundation for the H&ocirc;pital Sacr&eacute;
-Coeur.</b> </p> <p> Please see the organization&#8217;s IRS letter of determination, audited
+Coeur. All donations to the 100 Beds for Haiti campaign are earmarked for this particular cause.</p> <p> Please see the organization&#8217;s IRS letter of determination, audited
 financial statements and Tax ID number <a href="http://www.crudem.org/give/tax-info">here</a>. </p>
-<p> <b>ALL DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS PARTICULAR CAUSE AND
-WILL GO DIRECTLY TO THE ORGANIZATION.</b>
-
 </div> </div> #end def
