--- a/views/partners.tmpl
+++ b/views/partners.tmpl
@@ -7,9 +7,7 @@
 		<h1>Partners</h1>
 	</div>
 	<div id="right"> 
-		<img src="/images/stats.jpg" /> 
-		<p class="center">
-*2008 statistics</p>
+		<img src="/images/stats.png" />
 	</div>
 	<div id="left">
 		<h3>H&ocirc;pital Sacr&eacute; Coeur and The CRUDEM Foundation </h3>
@@ -24,46 +22,30 @@
 			
 		<p> 
 			As a 501c3 registered non-profit organization based
-			in the United States, <strong>all donations to CRUDEM through the 100 Beds
-			for Haiti Campaign are tax-deductible</strong>.  Please see the
+			in the United States, all donations to CRUDEM through the 100 Beds
+ for Haiti Campaign are tax-deductible.  Please see the
 			organization&#39;s IRS letter of determination, audited financial
  statements and Tax ID number <a href="http://www.crudem.org/give/tax-info" target="_blank">here</a>. 
 		</p>
 
-		<p> 
-			<em>100&#37; OF DONATIONS TO THE 100 BEDS FOR HAITI CAMPAIGN ARE EARMARKED FOR THIS
-				PARTICULAR CAUSE AND WILL GO DIRECTLY TO THE ORGANIZATION. 
-			</em>
-		</p> 
+		<p>100&#37; of donations to the 100 Beds for Haiti Campaign are earmarked for this particular cause and will go directly to the organization.</p> 
 
 		<p>
-			<em>
-				Please learn more about our partners and their work by visiting their <a href="http://www.crudem.org" target="_blank">website</a>, following
-				them on <a href="http://www.facebook.com/CRUDEMHaiti"
-				target="_blank">facebook</a> and on <a
-				href="http://twitter.com/crudem_haiti" target="_blank">twitter</a>.
-</em>
-		</p> 
+Please learn more about our partners and their work by visiting their <a href="http://www.crudem.org" target="_blank">website</a>, following
+ them on <a href="http://www.facebook.com/CRUDEMHaiti"
+				target="_blank">Facebook</a> and on <a
+				href="http://twitter.com/crudem_haiti" target="_blank">Twitter</a>.
+</p>
+ 
 	</div>
-	<div class="footer">
-		<object width="400" height="300"><param
-			name="allowfullscreen" value="true" /><param name="allowscriptaccess"
-			value="always" /><param name="movie"
-			value="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.
-			com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&
-			amp;fullscreen=1" />
-			<embed
-				src="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com
-				&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;
-				fullscreen=1" type="application/x-shockwave-flash"
-				allowfullscreen="true" allowscriptaccess="always" width="400"
-				height="300">
-			</embed>
-		</object>
-		<p>
-			<a
-			href="http://vimeo.com/5324039">H&ocirc;pital Sacr&eacute; Coeur</a>
-			from <a href="http://vimeo.com/user1951858">Crudem Foundation</a> on <a
+	
+
+<div class="footer">
+
+<object width="330" height="248"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=5324039&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="330" height="248"></embed></object>
+<p><a
+ href="http://vimeo.com/5324039">H&ocirc;pital Sacr&eacute; Coeur</a>
+ from <a href="http://vimeo.com/user1951858">Crudem Foundation</a> on <a
 			href="http://vimeo.com">Vimeo</a>.
 		</p>
 	</div>
